force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/Actual_Carousel__c.field-meta.xml
<CustomField>
    <fullName>Actual_Carousel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Carousel</label>
    <referenceTo>cloudx_cms__SS_Carousel__c</referenceTo>
    <relationshipLabel>Carousel Slides (Actual Carousel)</relationshipLabel>
    <relationshipName>Carousel_Slides</relationshipName>
    <type>Lookup</type>
</CustomField>