force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Autoplay__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Autoplay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Play</label>
    <type>Checkbox</type>
</CustomField>