force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Button_URL__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Button_URL__c</fullName>
    <inlineHelpText>Add a destination URL for button. Must start with http:// or https://</inlineHelpText>
    <label>Button URL</label>
    <type>Url</type>
</CustomField>