force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Button_Variant__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Button_Variant__c</fullName>
    <inlineHelpText>Choose a button design: Branding Editor, Neutral, or Bare.</inlineHelpText>
    <label>Button Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>brand</fullName>
                <default>true</default>
                <label>brand</label>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>