force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Image_URL__c</fullName>
    <inlineHelpText>Add an image URL. Must start with http:// or https:// for external pages.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>