force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Raw_WEBM_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Raw_WEBM_Video_URL__c</fullName>
    <description>Raw Video URL in Webm Format</description>
    <inlineHelpText>Raw Video URL in Webm Format</inlineHelpText>
    <label>Raw WEBM Video URL</label>
    <type>Url</type>
</CustomField>