force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Text_Alignment__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Text_Alignment__c</fullName>
    <inlineHelpText>Choose alignment of text: left, center, right</inlineHelpText>
    <label>Text Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>left</fullName>
                <default>true</default>
                <label>left</label>
            </value>
            <value>
                <fullName>center</fullName>
            </value>
            <value>
                <fullName>right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>