force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Text_Position__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Text_Position__c</fullName>
    <inlineHelpText>Card (bottom of image/video) or Overlay (full image/video)</inlineHelpText>
    <label>Caption Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>overlay</fullName>
                <default>true</default>
                <label>overlay</label>
            </value>
            <value>
                <fullName>top</fullName>
            </value>
            <value>
                <fullName>middle</fullName>
            </value>
            <value>
                <fullName>bottom</fullName>
            </value>
            <value>
                <fullName>card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>