force-app/main/default/objects/cloudx_cms__SS_Carousel_Slide__c/fields/cloudx_cms__Video_Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>cloudx_cms__Video_Embed_URL__c</fullName>
    <inlineHelpText>Add a video URL from YouTube or Vimeo. Must start with http:// or https://</inlineHelpText>
    <label>Video Embed URL</label>
    <type>Url</type>
</CustomField>